--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="/images/icon.png" type="image/x-icon">
     
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="/styles.css">
         <h1>Hola Mundo!</h1>
         <meta name="title" content="🐶La pagina de Shimi"/>
         <meta name="description" content="Hola! bienvenido a mi pagina"/>
