--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
         <link rel="shortcut icon" href="/images/icon.png" type="image/x-icon">
     
         <link rel="stylesheet" href="/styles.css">
-        <h1>Hola Mundo!</h1>
+
+        <title>La página del chimi</title>
         <meta name="title" content="🐶La pagina de Shimi"/>
         <meta name="description" content="Hola! bienvenido a mi pagina"/>
     </head>
     <body>
+        <h1>Hola Mundo!</h1>
+
         <p>Hola visitante de mi pagina web! Me llamo Shimi, soy un usuario normal de la comunidad de Discovery Kids, me encanta programar y a veces dibujar.</p>
         <img class="discord-presence" src="https://lanyard.cnrad.dev/api/680547329488453882" alt="presence" style="width: 30%;">
         <br>
