--- a/index.html
+++ b/index.html
@@ -1,30 +1,58 @@
 <!DOCTYPE html>
-<html style="text-align: center;">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="/images/icon.png" type="image/x-icon">
-    
-        <link rel="stylesheet" href="/styles.css">
+<html lang="es">
 
-        <title>La página del chimi</title>
-        <meta name="title" content="🐶La pagina de Shimi"/>
-        <meta name="description" content="Hola! bienvenido a mi pagina"/>
-    </head>
-    <body>
-        <h1>Hola Mundo!</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>La página de Shimi</title>
 
-        <p>Hola visitante de mi pagina web! Me llamo Shimi, soy un usuario normal de la comunidad de Discovery Kids, me encanta programar y a veces dibujar.</p>
-        <img class="discord-presence" src="https://lanyard.cnrad.dev/api/680547329488453882" alt="presence" style="width: 30%;">
+    <link rel="icon" href="images/icon.png">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <br><br><br><br>
+    <div class="container">
+        <h1 style="text-align: center; font-size: 50px; color: white; text-shadow: 5px 0px 0px black, 0px 2px 0px black, -3px 0px 0px black, 0px -3px 0px black;">Hola, soy <a href="https://www.youtube.com/channel/UCE3mDAwf3MiQdzW3AB-nSdw" style="color: #5865F2; text-decoration: none;" target="_blank">Shimi</a>. Me gusta programar.</h1>
+        <br><br>
+        <h2 style="text-align: center; text-shadow: 5px 0px 0px white, 0px 2px 0px white, -3px 0px 0px white, 0px -3px 0px white;">Repositorios</h2><hr>
         <br>
-        <h2>Proyectos</h2>
-        <button class="boton"><a href="https://retrokids.cf" class="texto-boton">Retro Kids</a></button>
-        <button class="boton"><a href="https://dokibot.shimidoki.ga" class="texto-boton">DokiBot</a></button>
+        <section class="rep-container">
+            <div class="repositorio">
+                <div class="rep-titulo"><i class="fa-brands fa-github"></i> dokibot <a href="#" style="color: red; text-decoration: none; font-size: 15px;">(privado)</a></div>
+                <hr>
+                <div class="rep-descripcion">Dokibot es un bot de Discord hecho con JavaScript, NodeJS y Discord.JS v13, tiene comandos de diversion, moderacion, utiles, economia, niveles y de reaccion.</div>
+            </div>
+            <div class="repositorio">
+                <div class="rep-titulo"><i class="fa-brands fa-github"></i> dokidash <a href="#" style="color: red; text-decoration: none; font-size: 15px;">(privado)</a></div>
+                <hr>
+                <div class="rep-descripcion">Es la pagina web / dashboard del bot de Discord... Dokibot. Hecho con NodeJS, Express, Passport, Passport-Discord y HandleBars.</div>
+            </div>
+            <div class="repositorio">
+                <div class="rep-titulo"><i class="fa-brands fa-github"></i> paginaweb <a href="https://github.com/ShimixD/paginaweb" style="color: 20AB4A; text-decoration: none; font-size: 15px;" target="_blank">(publico)</a></div>
+                <hr>
+                <div class="rep-descripcion">Literalmente es todo esto XD</div>
+            </div>
+        </section>
+        <br><br>
+        <h2 style="text-align: center; text-shadow: 5px 0px 0px white, 0px 2px 0px white, -3px 0px 0px white, 0px -3px 0px white;">Proyectos</h2><hr>
         <br>
-        <h2>Redes Sociales</h2>
-        <button class="boton"><a href="https://doki.fandom.com/es/wiki/Usuario:ShimiDoki" class="texto-boton">Dokipedia</a></button>
-        <button class="boton"><a href="https://discord.gg/r8V5DaSSyk" class="texto-boton">Discord</a></button>
-        <button class="boton"><a href="https://github.com/ShimixD" class="texto-boton">GitHub</a></button>
-        <button class="boton"><a href="https://twitter.com/JimgamerC/" class="texto-boton">Twitter</a></button>
-    </body>
+        <section class="proyecto-container">
+            <a href="https://retrokids.eu.org" target="_blank"><div class="proyecto" style="background-image: url(images/retrokids.png); background-size: 282px; background-repeat: no-repeat; background-position: -2px;"></div></a>
+            <a href="https://dokibot.shimidoki.eu.org" target="_blank"><div class="proyecto" style="background-image: url(images/dokibot.png); background-size: 282px; background-repeat: no-repeat; background-position: -2px;"></div></a>
+        </section>
+        <br><br><br><br>
+        <div style="text-align: center; font-size: 30px;">
+            <a href="https://github.com/ShimixD" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://discord.gg/r8V5DaSSyk" target="_blank"><i class="fa-brands fa-discord"></i></a>
+            <a href="https://twitter.com/JimgamerC/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+        
+        <footer style="font-size: 18px; color: white; text-align: center;">Contacto: shimitv123@gmail.com</footer>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"
+        integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+</body>
 </html>
