--- a/404.html
+++ b/404.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html style="text-align: center;">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="/images/icon.png" type="image/x-icon">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Error 404 :0</title>
 
-        <title>Página no encontrada</title>
-        <link rel="stylesheet" href="/styles.css">
-    </head>
-    <body>
-        <h1>Página no encontrada</h1>
-        <img src="/images/angai313-spongebob-sad.gif" alt="" style="width: 30%;">
-    </body>
+    <link rel="icon" href="images/icon.png">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div style="text-align: center;">
+        <h1 style="font-size: 50px;">Página no encontrada :(</h1>
+        <h5 style="font-size: 120px;"><a href="/">REGRESAR</a></h5>
+        <footer>literalmente esto esta saturado de br</footer>
+    </div>
+</body>
 </html>
