--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="rep-descripcion">Es la pagina web / dashboard del bot de Discord... Dokibot. Hecho con NodeJS, Express, Passport, Passport-Discord y HandleBars.</div>
             </div>
             <div class="repositorio">
-                <div class="rep-titulo"><i class="fa-brands fa-github"></i> paginaweb <a href="https://github.com/ShimixD/paginaweb" style="color: 20AB4A; text-decoration: none; font-size: 15px;" target="_blank">(publico)</a></div>
+                <div class="rep-titulo"><i class="fa-brands fa-github"></i> paginaweb <a href="https://github.com/ShimixD/paginaweb" style="text-decoration: none; font-size: 15px;" target="_blank">(publico)</a></div>
                 <hr>
                 <div class="rep-descripcion">Literalmente es todo esto XD</div>
             </div>
