--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <div class="repositorio">
                 <div class="rep-titulo"><i class="fa-brands fa-github"></i> dokibot <a href="#" style="color: red; text-decoration: none; font-size: 15px;">(privado)</a></div>
                 <hr>
-                <div class="rep-descripcion">Dokibot es un bot de Discord hecho con JavaScript, NodeJS y Discord.JS v13, tiene comandos de diversion, moderacion, utiles, economia, niveles y de reaccion.</div>
+                <div class="rep-descripcion">Dokibot es un bot de Discord hecho con Node.js y Discord.js v14, tiene comandos de diversión, moderacion, etc.</div>
             </div>
             <div class="repositorio">
                 <div class="rep-titulo"><i class="fa-brands fa-github"></i> dokidash <a href="#" style="color: red; text-decoration: none; font-size: 15px;">(privado)</a></div>
                 <hr>
-                <div class="rep-descripcion">Es la pagina web / dashboard del bot de Discord... Dokibot. Hecho con NodeJS, Express, Passport, Passport-Discord y HandleBars.</div>
+                <div class="rep-descripcion">Es la dashboard oficial de Dokibot. Hecho con Node.js, Express y HandleBars.</div>
             </div>
             <div class="repositorio">
                 <div class="rep-titulo"><i class="fa-brands fa-github"></i> paginaweb <a href="https://github.com/ShimixD/paginaweb" style="text-decoration: none; font-size: 15px;" target="_blank">(publico)</a></div>
